--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <li> Camels have three sets of eyelids and two rows of eyelashes to keep sand out of their eyes</li>
       <li> Camels have thick lips which let them forage for thorny plants other animals can't eat</li>
     </ol>
-    <a href="about.html"> About Us</a>
-    <a href ="followus.html"> Follow us</a>
+    <a href="about.html" target="_blank"> About Us</a>
+    <a href ="followus.html" target="_blank"> Follow us</a>
     
 </body>
 
